--- a/Test/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/Test/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,9 @@
 databaseChangeLog:
   - include:
       file: db/changelog/001-create-card-table.yaml
+
+  - include:
+      file: db/changelog/002-create-user-table.yaml
+
+  - include:
+      file: db/changelog/003-create-user-roles-table.yaml
